--- a/ch1_standdeg_seedbank_specialtraits.Rmd
+++ b/ch1_standdeg_seedbank_specialtraits.Rmd
@@ -47,69 +47,66 @@ germination_m2_raw_edit <- germination_m2_raw %>%
 glimpse(germination_m2_raw_edit)
 ```
 ```{r data prep}
-seedbank_load_v <- germination_m2_raw_edit %>%
+seedbank_load_w <- germination_m2_raw_edit %>%
   mutate(#year = as.character(year),
-                                     stand = as.character(stand), 
+                                stand = as.character(stand), 
                                 site = as.character(site),
                                 soilcore = as.character(soilcore), 
                                 depth_name = as.character(depth_name), 
                                 treatment = as.character(treatment), 
-        rep = as.integer(rep),                        
-         species_diversity = as.character(species_diversity), 
+                                rep = as.integer(rep),                        
+                                species_diversity = as.character(species_diversity), 
                                 genus_abundance = as.character(genus_abundance), 
                                 lifeform = as.character(lifeform), 
                                 status = as.character(status), 
                                 lifescycle = as.character(lifescycle), 
-                                family = as.character(family), 
-                                count = as.integer(count),
-        n_per_m2 = as.integer(n_per_m2),
-                                NOTES = as.character(NOTES)
-                              ) %>% 
-  dplyr::select(c("stand", "site", "soilcore", "depth_name", "treatment", "rep", "species_diversity", "genus_abundance", "lifeform", "status", "lifescycle", "family", "count")) %>% 
+                                family = as.character(family),
+                                n_per_m2 = as.integer(n_per_m2)
+                              ) %>%
   mutate(stand = fct_relevel(stand, 
             "intact", "enhanced", "degraded")) %>% 
   mutate(treatment = fct_relevel(treatment, 
-                                 "control", "charate", "oven", "ovenchar")) %>% 
-  mutate(stand = fct_recode(stand, 
-                                "shrub_dominated" = "intact", # rename stand types
-                                "matrix" = "enhanced",
-                                "grass_dominated" = "degraded")) %>%
-   filter(count != 0) # omitting observations with 0 count
+                                 "control", "charate", "oven", "ovenchar"))
+  # #mutate(stand = fct_recode(stand, 
+  #                               "shrub_dominated" = "intact", # rename stand types
+  #                               "matrix" = "enhanced",
+  #                               "grass_dominated" = "degraded"))
+
+tail(seedbank_load_w)
 
 # combine SITE and CORE to one column
-seedbank_load_v$stand_core <- paste(seedbank_load_v$site, seedbank_load_v$soilcore, sep="_") 
+seedbank_load_w$stand_core <- paste(seedbank_load_w$site, seedbank_load_w$soilcore, sep="_") 
 
 # combine SITE_CORE and DEPT to one column
-seedbank_load_v$stand_core_depth <- paste(seedbank_load_v$stand_core, seedbank_load_v$depth_name, sep="_") 
+seedbank_load_w$stand_core_depth <- paste(seedbank_load_w$stand_core, seedbank_load_w$depth_name, sep="_") 
 
 # combine SITE_CORE_DEPTH and TREATMENT to one column
-seedbank_load_v$stand_core_depth_treat <- paste(seedbank_load_v$stand_core_depth, seedbank_load_v$treatment, sep="_") 
+seedbank_load_w$stand_core_depth_treat <- paste(seedbank_load_w$stand_core_depth, seedbank_load_w$treatment, sep="_") 
 
 # combine SITE_CORE and TREATMENT to one column
-seedbank_load_v$stand_core_treat <- paste(seedbank_load_v$stand_core, seedbank_load_v$treatment, sep="_") 
+seedbank_load_w$stand_core_treat <- paste(seedbank_load_w$stand_core, seedbank_load_w$treatment, sep="_") 
 
-seedbank_load_v <- seedbank_load_v %>% 
+seedbank_load_w <- seedbank_load_w %>% 
   mutate(stand_core = fct_relevel(stand_core, 
                                   "INT1_1", "INT1_2" , "INT1_3" ,"INT2_4"  ,"INT2_5" , "INT2_6",  "INT3_7" , "INT3_8" , "INT3_9",
                                   "ENH1_1" , "ENH1_2" , "ENH1_3" , "ENH1_4" , "ENH1_5" , "ENH2_6" , "ENH2_7" , "ENH2_8"  ,"ENH2_9"  ,"ENH2_10", 
-                                 "DEG1_1" , "DEG1_2"  ,"DEG1_3"  ,"DEG1_4" , "DEG2_5" , "DEG2_6" , "DEG2_7" ))
+                                 "DEG1_1" , "DEG1_2"  ,"DEG1_3"  ,"DEG1_4" , "DEG2_5" , "DEG2_6" , "DEG2_7" ))  %>% 
+  mutate(site = fct_relevel(site, "INT1", "INT2", "INT3", "ENH1", "ENH2", "DEG1", "DEG2"))
 
-glimpse(seedbank_load_v)
-
-unique(seedbank_load_v$stand)
-unique(seedbank_load_v$site)
-unique(seedbank_load_v$soilcore)
-unique(seedbank_load_v$depth_name)
-unique(seedbank_load_v$treatment)
-unique(seedbank_load_v$species_diversity)
-unique(seedbank_load_v$status)
-unique(seedbank_load_v$stand_core_depth)
-unique(seedbank_load_v$stand_core_treat) # wrap by treatment instead of ordering
+unique(seedbank_load_w$stand)
+unique(seedbank_load_w$site)
+unique(seedbank_load_w$soilcore)
+unique(seedbank_load_w$depth_name)
+unique(seedbank_load_w$treatment)
+sort(unique(seedbank_load_w$species_diversity))
+unique(seedbank_load_w$status)
+unique(seedbank_load_w$stand_core_depth)
+unique(seedbank_load_w$stand_core_treat) # wrap by treatment instead of ordering
 
 
 #head(seedbank_load_v)
-str(seedbank_load_v)
-glimpse(seedbank_load_v)
+str(seedbank_load_w)
+glimpse(seedbank_load_w)
 
 
 #seedbank_load_v <- seedbank_load_v %>% 
